--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.5",
     "@nestjs/platform-express": "^11.0.5",
+    "@nestjs/serve-static": "^5.0.1",
     "@nestjs/swagger": "^11.0.3",
     "@nestjs/typeorm": "^11.0.0",
     "argon2": "^0.41.1",
